--- a/www/templates/stocklist.html
+++ b/www/templates/stocklist.html
@@ -1,8 +1,15 @@
 <ion-view view-title="My stocks">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="stock in stocks" ng-href="#/app/stock/{{stock.id}}">
-        {{stock.title}}
+      <ion-item ng-repeat="stock in stocks track by stock.ticker" ng-href="#/app/stocks/{{stock.ticker}}">
+        <div class="row row-center">
+          <div class="col">
+            <h3>{{stock.ticker}}</h3>
+          </div>
+          <div class="col">
+            <h3>300.23</h3>
+          </div>
+        </div>
       </ion-item>
     </ion-list>
   </ion-content>
