Market data and trend graphs

--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -1,18 +1,18 @@
-<ion-view view-title="{{stock.ticker}}">
+<ion-view view-title="{{pricedate.symbol}}">
 
   <div class="bar bar-subheader bar-light">
 
     <div class="buttons" side="left">
       <div class="button button-clear">
-        <h6>{{stock.company}}.</h6>
+        <h6>{{marketdata.Name}}</h6>
       </div>
     </div>
 
-    <h2 class="title button-left button-right">{{stock.price}}</h2>
+    <h2 class="title button-left button-right">{{pricedata.price}}</h2>
 
     <div class="buttons" side="right">
       <div class="button button-clear">
-        <h6>{{marketdata.ChangeInPercent}}</h6>
+        <h6>{{marketdata.ChangeinPercent}}</h6>
       </div>
     </div>
   </div>
@@ -20,14 +20,66 @@
   <ion-content class="has-subheader">
 
     <div class="card">
-      <div class="item item-divider">Market Data</div>
-      <div class="row row-center">
-        <div class="col">Sale:</div>
-        <div class="col">{{marketdata.PriceSales}}</div>
+      <div class="item item-divider">Trends</div>
+      <div class="button-bar">
+        <button ng-click="chartview = 1" class="button" ng-class="chartview ==1 ? 'active' : ''">Day</button>
+        <button ng-click="chartview = 2" class="button" ng-class="chartview ==2 ? 'active' : ''">Week</button>
+        <button ng-click="chartview = 3" class="button" ng-class="chartview ==3 ? 'active' : ''">3M</button>
+        <button ng-click="chartview = 4" class="button" ng-class="chartview ==4 ? 'active' : ''">Year</button>
+        <button ng-click="chartview = 5" class="button" ng-class="chartview ==5 ? 'active' : ''">Max</button>
       </div>
       <div class="row row-center">
-        <div class="col">Change:</div>
-        <div class="col">{{marketdata.ChangeinPercent}}</div>
+        <img ng-if="chartview == 1" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=1d&q=l&l=on&z=m&a=vm" style="width:100%"></img>
+        <img ng-if="chartview == 2" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=5d&q=l&l=on&z=m&a=vm" style="width:100%"></img>
+        <img ng-if="chartview == 3" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=3m&q=l&l=on&z=m&a=vm" style="width:100%"></img>
+        <img ng-if="chartview == 4" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=1y&q=l&l=on&z=m&a=vm" style="width:100%"></img>
+        <img ng-if="chartview == 5" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=my&q=l&l=on&z=m&a=vm" style="width:100%"></img>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="item item-divider">Market Data</div>
+      <div class="row row-center">
+        <div class="col">Ask:</div>
+        <div class="col">{{marketdata.Ask}}</div>
+        <div class="col">Bid:</div>
+        <div class="col">{{marketdata.Bid}}</div>
+      </div>
+      <div class="row row-center">
+        <div class="col">Prev. close:</div>
+        <div class="col">{{marketdata.PreviousClose}}</div>
+        <div class="col">Open:</div>
+        <div class="col">{{marketdata.Open}}</div>
+      </div>
+      <div class="row row-center">
+        <div class="col">Day's high:</div>
+        <div class="col">{{pricedata.day_high}}</div>
+        <div class="col">Day's low:</div>
+        <div class="col">{{pricedata.day_low}}</div>
+      </div>
+      <div class="row row-center">
+        <div class="col">52w high:</div>
+        <div class="col">{{marketdata.YearHigh}}</div>
+        <div class="col">52w low:</div>
+        <div class="col">{{marketdata.YearLow}}</div>
+      </div>
+      <div class="row row-center">
+        <div class="col">Volume:</div>
+        <div class="col">{{pricedata.volume}}</div>
+        <div class="col">Avg. volume:</div>
+        <div class="col">{{marketdata.AverageDailyVolume}}</div>
+      </div>
+      <div class="row row-center">
+        <div class="col">Market cap:</div>
+        <div class="col">{{marketdata.MarketCapitalization}}</div>
+        <div class="col">EBITDA:</div>
+        <div class="col">{{marketdata.EBITDA}}</div>
+      </div>
+      <div class="row row-center">
+        <div class="col">P/E:</div>
+        <div class="col">{{marketdata.PERatio}}</div>
+        <div class="col">EP:</div>
+        <div class="col">{{marketdata.EarningsShare}}</div>
       </div>
     </div>
 
