--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -38,6 +38,13 @@
     </div>
 
     <div class="card">
+      <div class="item item-divider">Historical data</div>
+      <div class="row row-center">
+        <div class="chartStyles" nv-chart="chartOptions"></div>
+      </div>
+    </div>
+
+    <div class="card">
       <div class="item item-divider">Market Data</div>
       <div class="row row-center">
         <div class="col">Ask:</div>
