--- a/www/templates/stock.html
+++ b/www/templates/stock.html
@@ -32,15 +32,8 @@
         <img ng-if="chartview == 1" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=1d&q=l&l=on&z=m&a=vm" style="width:100%"></img>
         <img ng-if="chartview == 2" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=5d&q=l&l=on&z=m&a=vm" style="width:100%"></img>
         <img ng-if="chartview == 3" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=3m&q=l&l=on&z=m&a=vm" style="width:100%"></img>
-        <img ng-if="chartview == 4" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=1y&q=l&l=on&z=m&a=vm" style="width:100%"></img>
+        <div ng-if="chartview == 4" class="chartStyles" nv-chart="chartOptions" style="height:70vh;width:100%;"></div>
         <img ng-if="chartview == 5" ng-src="http://chart.finance.yahoo.com/z?s={{pricedata.symbol}}&t=my&q=l&l=on&z=m&a=vm" style="width:100%"></img>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="item item-divider">Historical data</div>
-      <div class="row row-center">
-        <div class="chartStyles" nv-chart="chartOptions"></div>
       </div>
     </div>
 
